--- a/style/style.css
+++ b/style/style.css
@@ -1423,6 +1423,18 @@ button:focus {
     }
 }
 
+.siteForm__dateInput{
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border-radius: 6px;
+}
+
+.siteForm__dateInput i{
+    font-size: 24px;
+    padding: 0px 10px;
+}
+
 /* Patients */
 .patients{
     width: 100%;
@@ -2158,11 +2170,11 @@ b{
 
 #datepicker{
     width: 100%;
-    height: 40px;
+    padding: 8px 10px 8px 20px;
     background-color: #fbfbfb;
-    border: 1px solid #eaeaea;
+    border: none;
+    outline: none;
     border-radius: 6px;
-    padding-left: 20px;
 }
 
 @media screen and (max-width: 1700px) {
@@ -2188,22 +2200,15 @@ b{
 
 .timepicker{
     width: 100%;
-    height: 40px;
     background-color: #fbfbfb;
     border: 1px solid #eaeaea;
     border-radius: 6px;
-    padding-left: 20px;
-}
-
-@media screen and (max-width: 1700px) {
-    .timepicker{
-        max-width: 100%;
-    }
+    padding: 8px 10px 8px 20px;
 }
 
 .gj-modal > div{
     position: relative !important;
-    top: 7% !important;
+    top: 42% !important;
     left: 50% !important;
     transform: translate(-50%, -50%);
 }
