--- a/style/style.css
+++ b/style/style.css
@@ -868,7 +868,7 @@ button:focus {
     flex-direction: row;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .department__box{
         padding-top: 30px;
     }
@@ -882,7 +882,7 @@ button:focus {
     padding-bottom: 50px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .departments__title{
         font-size: 22px;
         padding-bottom: 0px;
@@ -1054,7 +1054,7 @@ button:focus {
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .doctors__title{
         font-size: 22px;
         padding-bottom: 0px;
@@ -1077,7 +1077,7 @@ button:focus {
     margin: 0;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .doctors__box{
         justify-content: center;
         padding-top: 30px;
@@ -1089,7 +1089,7 @@ button:focus {
     height: auto;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .doctors__main{
         max-width: 320px;
         width: 100%;
@@ -1212,7 +1212,7 @@ button:focus {
     height: 100%;
     background-color: #3f3c3c;
     position: relative;
-    padding: 90px 15px 120px 30px;
+    padding: 94px 15px 120px 30px;
     z-index: 1;
 }
 
@@ -1691,7 +1691,7 @@ li.slick-active #slick-slide-control00, li.slick-active #slick-slide-control01, 
 
 .lastNews__box{
     width: 100%;
-    height: 100%;
+    height: auto;
     border: 1px solid #eaeaea;
     border-radius: 8px;
 }
